Version 2.0.1
    + fix API scheme usage

Version 2.0.0
    + new API scheme

Version 1.2.0
    + non-blocking message handling
    + bot's user_info field (id, nickname etc.)
    + bot's verbosity level settings
    + file upload fixes

Version 1.1.0
    + high-level handling of LoadHistory API method
    + checking of peer instance in send_message method
    + echobot example