@@ -1,5 +1,6 @@
 Version 2.0.1
     + fix API scheme usage
+    + messaging fixes
 
 Version 2.0.0
     + new API scheme
